
    o count and scanBam support input of larger numbers of records; 
    countBam nucleotide count is now numeric() and subject to rounding
    error when large.

    o Update to samtools 0.1.17

    o asBcf and indexBcf coerces VCF files to BCF, and indexes BCF

    o Update to samtools 0.1.18

    o scanVcf parses VCF files; use scanVcf,connection,missing-method
    to stream, scanVcf,TabixFile,*-method to select subsets

BUG FIXES

    o scanBam (and readBamGappedAlignments) called with an invalid or
    character(0) index no longer segfaults.

    o scanBcfHeader parses values with embedded commas or =

    o scanFa fails, rather than returns incorrect sequences, when file
    is compressed and file positions are not accessed sequentially

    o scanBcf parses VCF files with no genotype information.

    o scanBam called with the first range having no reads returned
    invalid results for subsequent ranges; introduced in svn r57138

    o scanBamFlag isPrimaryRead changed to isNotPrimaryRead,
    correctly reflecting the meaning of the flag.

CHANGES IN VERSION 1.4.0
------------------------

NEW FEATURES

    o BamFile class allows bam files to be open across calls to
    scanBam and friends. This can be helpful when wanting to avoid
    repeated loading of the index, for instance.

    o BcfFile, scanBcf, scanBcfHeader to parse bcftools' .vcf and .bcf
    files. Note that this implements bcftools notions of vcf and bcf,
    and are not fully compliant with vcf-4.0.

    o asBam converts SAM files to (indexed) BAM files

    o FaFile, indexFa, scanIndexFa, scanFa index and parse (indexed)
    fasta files.

BUG FIXES

    o scanBamFlag isValidVendorRead had reversed TRUE/FALSE logic

    o Attempts to read too many records caught more gracefully.

    o samtools output to fprintf() or calls to exit() are handled more
    gracefully

CHANGES IN VERSION 1.2.0
------------------------

NEW FEATURES

    o Update to samtools 0.1.8
