@@ -110,7 +110,7 @@ setMethod(scanVcf, c("character", "ANY"),
         txt <- readLines(file, ...)
         txt <- txt[!grepl("^#", txt)] # FIXME: handle header lines better
         result <- .Call(.scan_vcf_connection, txt, samples, map)
-        names(result) <- fl
+        names(result) <- "*:*-*"
         result
     }, error = function(err) {
         stop("scanVcf: ", conditionMessage(err), "\n  path: ", 
@@ -133,36 +133,69 @@ setMethod(scanVcf, c("connection", "missing"),
     .vcf_scan_connection(file, ...)
 })
 
-## utilities
+## unpackVcf
 
 .unpackVcfField <-
     function(x, id, n, type)
     ## convert sub-fields in 'x' to full R representation
 {
     d <- suppressWarnings(as.integer(n))
-    x <- if (!is.na(d)) {
-        if (1L == d) x
-        else {
-            a <- array(unlist(strsplit(x, ",", fixed=TRUE)),
-                       dim=c(d, nrow(x), ncol(x)),
-                       dimnames=list(NULL, NULL, colnames(x)))
-            aperm(a, c(2, 3, 1))
+    withCallingHandlers({
+        x <- if (!is.na(d)) {
+            if (1L < d) {
+                x <- array(unlist(strsplit(x, ",", fixed=TRUE)),
+                           dim=c(d, nrow(x), ncol(x)),
+                           dimnames=list(NULL, NULL, colnames(x)))
+                x <- aperm(x, c(2, 3, 1))
+            }
+            switch(type, Flag= !is.na(x),
+                   Character=, String=x,
+                   Integer={ mode(x) <- "integer"; x },
+                   Float={ mode(x) <- "numeric"; x },
+                   stop(sprintf("unhandled FORMAT type '%s'", type)))
+        } else {
+            x <- split(strsplit(x, ",", fixed=TRUE), seq_len(nrow(x)))
+            x <- switch(type, Character=, String=x,
+                        Integer=lapply(x, lapply, as.integer),
+                        Float=lapply(x, lapply, as.numeric),
+                        stop(sprintf("unhandled FORMAT type '%s'", type)))
+            names(x) <- NULL
+            x
         }
-    } else {
-        split(strsplit(x, ",", fixed=TRUE), seq_len(nrow(x)))
-    }
-    switch(type,
-           "Character"=,
-           "String"=x,
-           "Integer"={
-               mode(x) <- "integer"
-               x
-           },
-           "Float"={
-               mode(x) <- "numeric"
-               x
-           },
-           stop(sprintf("unhandled FORMAT type '%s'", type)))
+    }, warning=function(w) {
+        msg <- sprintf("unpackVcf field '%s': %s", id,
+                       conditionMessage(w))
+        warning(msg, call.=FALSE)
+        invokeRestart("muffleWarning")
+    })
+}
+
+.unpackVcfInfo <-
+    function(info, id, n, type)
+{
+    nrec <- length(info)
+
+    recs <- strsplit(info, ";", fixed=TRUE)
+    ridx <- rep(seq_along(recs), sapply(recs, length))
+    flds <- strsplit(unlist(recs), "=", fixed=TRUE)
+    tags <- factor(sapply(flds, "[[", 1),
+                   levels=id)
+    names(type) <- id
+
+    info <- Map(function(type, ridx, flds) {
+        res <- matrix(NA_character_, nrow=nrec, ncol=1)
+        res[ridx] <- 
+            if (type=="Flag") ""
+            else sapply(flds, "[[", 2)
+        res
+    }, type[levels(tags)], split(ridx, tags), split(flds, tags))
+
+    result <- Map(.unpackVcfField, info, id, n, type)
+    lapply(result, function(elt) {
+        if (is(elt, "list"))
+            unlist(elt, recursive=FALSE, use.names=FALSE)
+        else elt
+    })
 }
 
 .unpackVcfGeno <-
@@ -171,7 +204,7 @@ setMethod(scanVcf, c("connection", "missing"),
     ## id, n, type are equal-length vectors of FORMAT info
 {
     if (is.null(names(geno)))
-        stop("'geno' must be a named list")
+        stop("'GENO' must be a named list")
     Map(function(elt, nm, id, n, type) {
         if (is.na(idx <- match(nm, id))) {
             msg <- sprintf("element '%s' not found in FORMAT identifiers",
@@ -181,3 +214,47 @@ setMethod(scanVcf, c("connection", "missing"),
         .unpackVcfField(elt, id[idx], n[idx], type[idx])
     }, geno, names(geno), MoreArgs=list(id, n, type))
 }
+           
+setMethod(unpackVcf, c("list", "missing"),
+    function(x, hdr, ..., info=TRUE, geno=TRUE)
+{
+    if (!is.logical(info))
+        x <- lapply(x, function(elt, id, n, type) {
+            elt[["INFO"]] <- .unpackVcfInfo(elt[["INFO"]], id, n, type)
+            elt
+        }, rownames(info), info$Number, info$Type)
+    if (!is.logical(geno))
+        x <- lapply(x, function(elt, id, n, type) {
+            elt[["GENO"]] <- .unpackVcfGeno(elt[["GENO"]], id, n, type)
+            elt
+        }, rownames(geno), geno$Number, geno$Type)
+    x
+})
+
+setMethod(unpackVcf, c("list", "character") ,
+    function(x, hdr, ..., info=TRUE, geno=TRUE)
+{
+    if (info) {
+        info <- scanVcfHeader(hdr)[[1]][["Header"]][["INFO"]]
+        if (is.null(info)) {
+            msg <- sprintf("'INFO' vcf header info not found\n  path: %s",
+                           hdr)
+            stop(msg)
+        }
+    }
+    if (geno) {
+        geno <- scanVcfHeader(hdr)[[1]][["Header"]][["FORMAT"]]
+        if (is.null(geno)) {
+            msg <- sprintf("'FORMAT' vcf header info not found\n  path: %s",
+                           hdr)
+            stop(msg)
+        }
+    }
+    unpackVcf(x, ..., info=info, geno=geno)
+})
+
+setMethod(unpackVcf, c("list", "TabixFile") ,
+    function(x, hdr, ..., info=TRUE, geno=TRUE)
+{
+    unpackVcf(x, path(hdr), ..., info=info, geno=geno)
+})
